@@ -34,6 +34,8 @@
 # include <config.h>
 #endif
 
+#include <zebra.h>
+
 #if !defined __STDC__ || !__STDC__
 /* This is a separate conditional since some stdc systems
    reject `defined (const)'.  */
